--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -26,7 +26,7 @@
       </div>
       <p id='output'><%= output %></p>
       <img height=400 width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
-      <p id='carbon_estimate'>Estimated amount of carbon is: <%= carbon_estimate %> kg</p>
+      <p id='carbon_estimate'>Estimated amount of carbon is: <%= carbon_estimate %> g</p>
      </div>
 
      <script>
