--- a/views/partials/CO2perWeek.ejs
+++ b/views/partials/CO2perWeek.ejs
@@ -26,7 +26,7 @@
                 data: {
                     labels: chartByWeekLabels,
                     datasets: [{
-                        label: 'kg of CO2 per day',
+                        label: 'Grams of CO2 per day',
                         data: chartByWeekData,
                         borderWidth: 1,
                         borderColor: 'rgba(75, 192, 192, 1)',
@@ -51,7 +51,7 @@
                 <tr>
                     <!-- table headings -->
                     <th class="text">Date</th>
-                    <th class="text"> kg CO2 emissions </th>
+                    <th class="text">CO2(g) per day </th>
                 </tr>
             </thead>
             <tbody>
