--- a/views/partials/userFoodLog.ejs
+++ b/views/partials/userFoodLog.ejs
@@ -29,7 +29,7 @@
                                 <%= record.Food %>
                             </td>
                             <td>
-                                <%= record.Carbon_Emissions %> kg
+                                <%= record.Carbon_Emissions %> g
                             </td>
                         </tr>
                     <% }) %>
