--- a/views/pages/getMenu.ejs
+++ b/views/pages/getMenu.ejs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Dining Hall Menu Suggestions</title>
+		<title>Get Current Menu</title>
 		<link rel="icon" type="image/png" href="/icons/orange.png">
 		<link rel="stylesheet" href="/css/styles.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
@@ -10,16 +10,13 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/menu" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
 			<h1home>Dining Hall Menu Suggestions</h1home>
-		   <div class="getMenu">
-			<form method="post" action="/getMenu">
-				<input class="button" type="submit" value="Get Current Menu" id='get_menu'>
+		   <div class="viewMenu">
+			<form method="get" action="/menu">
+				<input class="button" type="submit" value="View Menu" id='view_menu'>
 			</form>
-		   </div>
-		   <div class="card">
-				<%- include('../partials/ruMenu') %>
 		   </div>
 		</div>
 	</body>
