dining hall scraping done, output displayed

--- a/views/partials/ruMenu.ejs
+++ b/views/partials/ruMenu.ejs
@@ -17,6 +17,7 @@
                     <th class="text">Meal</th>
                     <th class="text">Serving Size</th>
                     <th class="text">Calories</th>
+                    <th class="text">Carbon</th>
                 </tr>
             </thead>
             <tbody>
@@ -41,6 +42,9 @@
                             </td>
                             <td>
                                 <%= record.Meal_Calories %>
+                            </td>
+                            <td>
+                                <%= record.Carbon %> g
                             </td>
                         </tr>
                     <% }) %>
