Added flip camera function?

--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -32,6 +32,7 @@
                         <input class="captured" type="hidden" name="photo" id="photo" value="none">
                     </form>
                     <a class="button takephoto" href="#" id="take-photo" title="Take Photo" onclick="photo()">Take Photo</a>
+                    <a class="button flip" href="#" id="flip-cam" title="Flip" onclick="webcam.flip()">Flip Camera</a>
                     <a class="button retakephoto" href="/upload" id="retake-photo" title="Retake Photo">Retake Photo</a>
                 </div>
             </div>        
