--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,18 +13,17 @@
 	<body>
 		<div class="container">
 			<div class="logout">
-				<a href="/logout" class="icon" title="Logout"><i class="material-icons">logout</i></a>
-				<a href="/info" class="icon info" title="More Info"><i class="material-icons inactive">help_outline</i></a>
+				<a href="/logout" class="iconinfo" title="Logout"><i class="material-icons top">logout</i></a>
+				<a href="/info" class="iconinfo" title="More Info"><i class="material-icons top">help_outline</i></a>
 			</div>
-			<h1 class="home">Welcome Back</h1>
-			 
+			<h1 class="home">Welcome Back!</h1>
+			<img src="/icons/plant.png" width="420" height="420" style="vertical-align:top"> 
 			<div class="tray">
-					<a href="/menu" class="icon" title="Dining Hall Menu"><i class="material-icons inactive">restaurant_menu</i></a> 
+					<a href="/menu" class="icon" title="Dining Hall Menu"><i class="material-icons">restaurant_menu</i></a> 
 					<a href="/foodlog" class="icon" title="Food Log"><i class="material-icons">receipt_long</i></a>
 					<a href="/upload" class="icon cam-bubble" title="Camera"><i class="material-icons cam">camera_alt</i></a>
 					<a href="/stats" class="icon" title="Statistics"><i class="material-icons">analytics</i></a>
-					<a href="/points" class="icon" title="Points"><i class="material-icons inactive">monetization_on
-					</i></a>
+					<a href="/points" class="icon" title="Points"><i class="material-icons">monetization_on</i></a>
 			</div>
 			
 		</div>
