--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,8 @@
 /* GLOBAL VARIABLES */
 :root {
     --containershadow: #a3b18a;
-    --offwhite: #e1e7de;
-    --white: #fdfdfd;
+    --offwhite: #e9fce0;
+    --white: #f6fdf6;
     --text: #175872;
     --textshadow: #5b8a6f;
     --button: #5f8a6d;
@@ -67,7 +67,7 @@ h1{
 }
 .back{
   padding: 0px;
-  color: var(--offwhite);
+  color: #ffa856;
   border-radius: 12px;
   position: absolute;
   top: 20px;
@@ -78,15 +78,19 @@ h1{
   color: var(--button);
   border-radius: 12px;
 }
+.material-icons.top{
+  margin: 10px;
+  color: #ffa856;
+}
 .material-icons{
   margin: 5px;
-  color: var(--button);
-}
-.material-icons.inactive{
-  color: var(--offwhite);
+  color: var(--white);
 }
 .material-icons:hover{
   color: var(--containershadow);
+}
+.info{
+  color: #ffa856;
 }
 
 fieldset{
@@ -180,28 +184,26 @@ input[type=text], input[type=password] {
   justify-content: space-between;
 }
 h1.home{
-  margin-top: 200px;
+  margin-top: 80px;
   margin-bottom: 0px;
+  text-align: left;
 }
 .tray {
   width: 75%;
-  margin: auto;
   margin-bottom: 30px;
   border-radius: 50px;
   padding: 0px;
-  background-color: #eff2fa;
+  background-color: #6b916a;
   display: flex;
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 3px 7px #b6bdb2;
 }
 .icon.cam-bubble{
-  background-color: #cfd9f1;
+  background-color: #ffa856;
   border-radius: 50%;
 }
-.icon.cam-bubble:hover{
-  background-color: #91aceb;
-}
+
 .material-icons.cam{
   font-size: 48px;
 }
