carbon count placeholder

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -16,7 +16,14 @@
 				<a href="/logout" class="iconinfo" title="Logout"><i class="material-icons top">logout</i></a>
 				<a href="/info" class="iconinfo" title="More Info"><i class="material-icons top">help_outline</i></a>
 			</div>
-			<h1 class="home">Welcome Back!</h1>
+			<div id="welcome">
+				<h1 class="home">Welcome Back!</h1>
+
+				<div id="points">
+					<p>100/4000</p>
+				</div>
+
+			</div>
 			<img src="/icons/plant.png" width="420" height="420" style="vertical-align:top"> 
 			<div class="tray">
 					<a href="/menu" class="icon" title="Dining Hall Menu"><i class="material-icons">restaurant_menu</i></a> 
