--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,7 +79,7 @@ h1{
   border-radius: 12px;
 }
 .material-icons.top{
-  margin: 10px;
+  margin: 30px;
   color: #ffa856;
 }
 .material-icons{
@@ -183,14 +183,40 @@ input[type=text], input[type=password] {
   flex-direction: row;
   justify-content: space-between;
 }
+#welcome{
+  margin: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 30px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
 h1.home{
-  margin-top: 80px;
-  margin-bottom: 0px;
-  text-align: left;
+  margin: 0;
+  padding: 0;
+  margin-right: 90px;
+  text-align: start;
+}
+#points{
+  width: fit-content;
+  border-radius: 50px;
+  background-color: #5b8a6f;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 90px;
+}
+#points p{
+  padding: 5px;
+  font-style: italic;
+  margin: 0;
+  color: var(--white);
 }
 .tray {
   width: 75%;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   border-radius: 50px;
   padding: 0px;
   background-color: #6b916a;
