--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -14,7 +14,9 @@
 		<div class="container">
 			<div class="logout">
 				<a href="/logout" class="iconinfo" title="Logout"><i class="material-icons top">logout</i></a>
-				<a href="/info" class="iconinfo" title="More Info"><i class="material-icons top">help_outline</i></a>
+				
+				<a href="/info" class="orange" title="More Info"><img src="/icons/orange.png" width="45" height="45"> </a>
+				
 			</div>
 			<div id="welcome">
 				<h1 class="home">Welcome Back!</h1>
