carbon sum displayed

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -16,13 +16,13 @@
 				<a href="/logout" class="iconinfo" title="Logout"><i class="material-icons top">logout</i></a>
 				
 				<a href="/info" class="orange" title="More Info"><img src="/icons/orange.png" width="45" height="45"> </a>
-				
+
 			</div>
 			<div id="welcome">
 				<h1 class="home">Welcome Back!</h1>
 
 				<div id="points">
-					<p>100/4000</p>
+					<p id='display_emissions'><%= display_emissions%> /5000 </p>
 				</div>
 
 			</div>
