--- a/views/pages/points.ejs
+++ b/views/pages/points.ejs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Points</title>
+		<title>Rewards</title>
 		<link rel="icon" type="image/png" href="/icons/orange.png">
 		<link rel="stylesheet" href="/css/styles.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
@@ -12,8 +12,9 @@
 			<div class="back">
 				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
-			<h1home>Points</h1home>
-			<h4>Show me the (fake) money.</h4>
+			<h1home>Rewards(sample page)</h1home>
+			<h4>Coming Soon! Use this QR Code to recieve rewards from select locations</h4>
+			<img src="/icons/plantQR.png" width="420" height="420" style="vertical-align:top">
 		</div>
 	</body>
 </html>
