--- a/views/pages/foodlog.ejs
+++ b/views/pages/foodlog.ejs
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=500" />
 		<title>Food Log</title>
 		<link rel="stylesheet" href="/css/styles.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
