--- a/views/pages/points.ejs
+++ b/views/pages/points.ejs
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=500" />
 		<title>Points</title>
 		<link rel="icon" type="image/png" href="/icons/orange.png">
 		<link rel="stylesheet" href="/css/styles.css">
