--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=500" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>CO2nsume</title>
         <link rel="icon" type="image/png" href="/icons/orange.png">
