--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+		<meta name="viewport" content="width=500" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>CO2nsume</title>
         <meta name="description" content="Rutgers University Electrical & Computer Engineering Dept Capstone Project Spring 2021">
