--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,13 +141,15 @@ input[type=text], input[type=password] {
   width: 25%;
   margin: auto;
 }
-.upload{
+ .upload{
+  background-color: var(--button);
   margin: auto;
   margin-top: 10px;
 }
 .retakephoto{
-  margin-top: 130px;
-}
+  width: 25%;
+  margin:auto;
+} 
 
 /* LOADING */
 .progressBar{
@@ -241,6 +243,7 @@ h1.home{
 /* FOOD LOG */
 th{
   color: #89bb68;
+  width:100px
 }
 table td{
   padding: 5px;
