monthly goal fixed

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -22,7 +22,7 @@
 				<h1 class="home">Welcome Back!</h1>
 
 				<div id="points">
-					<p id='display_emissions'><%= display_emissions%> /5000 </p>
+					<p id='display_emissions'><%= display_emissions%> /405 kg </p>
 				</div>
 
 			</div>
