--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -54,7 +54,7 @@
         const webcamElement = document.getElementById('webcam');
         const canvasElement = document.getElementById('canvas');
         const snapSoundElement = document.getElementById('snapSound');
-        const webcam = new Webcam(webcamElement, 'user', canvasElement, snapSoundElement);
+        const webcam = new Webcam(webcamElement, 'environment', canvasElement, snapSoundElement);
         const uploadButton = document.getElementById('upload');
         const takephoto = document.getElementById('take-photo');
         const retakephoto = document.getElementById('retake-photo');
