--- a/views/pages/menu.ejs
+++ b/views/pages/menu.ejs
@@ -13,13 +13,13 @@
 			<div class="back">
 				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
-			<h1>Dining Hall Menu Suggestions</h1>
-		   <div class="getMenu">
+		   <h1 class="dhmenu">Dining Hall Menu Suggestions</h1>
+		   <!-- <div class="getMenu">
 			<form id="f" method="post" action="/getMenu"></form>
-			<!-- <form method="get" action="/getMenu">
+			<form method="get" action="/getMenu">
 				<input class="button" type="submit" value="Get Current Menu" id='get_menu'>
-			</form> -->
-		   </div>
+			</form>
+		   </div> -->
 		   <div id="thetable" class="card">
 				<%- include('../partials/ruMenu') %>
 		   </div>
