--- a/views/pages/info.ejs
+++ b/views/pages/info.ejs
@@ -13,8 +13,9 @@
 			<div class="back">
 				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
-		   <div class="mySlides">
-			    <h1>About</h1>
+		   <div class="mySlides fade">
+			    <h1 class="slide_title">About CO2nsume</h1>
+				<img class="earth" src="/icons/earth.png" alt="" height="175px">
 				<p>
 					Did you know that food production accounts for 30% of total global greenhouse gas emissions?
 				</p>
@@ -22,31 +23,31 @@
 					CO2nsume (pronounced like the word “consume”), aims to raise student awareness of the environmental impacts of eating habits, and encourage a healthier, more sustainable lifestyle.  
 				</p>
 		   </div>
-		   <div class="mySlides"> 
-				<p>
-					<h2>Objectives</h2>
-					<h3>Sustainability</h3>
-					<p>Reduce carbon emissions from food production </p>
-					<h3>Health</h3>
-					<p>Encourage healthier lifestyles</p>
-					<h3>Awareness</h3>
-					<p>Highlight the connection between eating habits, health, and the environment</p>
-				</p>
+		   <div class="mySlides fade"> 
+				<h1 class="slide_title">Objectives</h1>
+				<h3>Sustainability</h3>
+				<p>Reduce carbon emissions from food production </p>
+				<h3>Health</h3>
+				<p>Encourage healthier lifestyles</p>
+				<h3>Awareness</h3>
+				<p>Highlight the connection between eating habits, health, and the environment</p>
 		   </div>
-		   <div class="mySlides">
-			<h2>Features</h2>
+		   <div class="mySlides fade">
+			<h1 class="slide_title">Features</h1>
+			<img class="earth" src="/icons/output.png" alt="" height="225px">
 			<p>
 				CO2nsume utilizes machine learning algorithms to identify foods via smartphone images and calculate the CO2 emissions associated with producing and transporting the foods.
 			</p>
-
 		   </div>
-		   <div class="mySlides">
+		   <div class="mySlides fade">
+			<h1 class="slide_title">Features</h1>   
 			<p>
 				It also integrates university dining hall menus to suggest healthier and more sustainable meals to students. 
 			</p>
 			<p> 
 				CO2nsume is capable of identifying 39 foods most commonly eaten on college campuses:
 			</p>
+			<img class="earth" src="/icons/foods.png" alt="" height="325px">
 		   </div>
 		   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   		   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -54,6 +55,7 @@
 				<span class="dot" onclick="currentSlide(1)"></span>
 				<span class="dot" onclick="currentSlide(2)"></span>
 				<span class="dot" onclick="currentSlide(3)"></span>
+				<span class="dot" onclick="currentSlide(4)"></span>
 		   </div>
 		</div>
 		<script>
