--- a/views/pages/getMenu.ejs
+++ b/views/pages/getMenu.ejs
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/menu" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/menu" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 			<h1home>Fetching the current menu...</h1home>
 		   <div class="viewMenu">
