--- a/views/pages/menu.ejs
+++ b/views/pages/menu.ejs
@@ -11,7 +11,7 @@
 	<body onload="alternate('thetable')">
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 		   <h1 class="dhmenu">Dining Hall Menu Suggestions</h1>
 		   <!-- <div class="getMenu">
