--- a/views/pages/points.ejs
+++ b/views/pages/points.ejs
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 			<h1home>Rewards(sample page)</h1home>
 			<h4>Coming Soon! Use this QR Code to recieve rewards from select locations</h4>
