--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -18,7 +18,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 			<h1>Create an account</h1>
 			<form class="form signup-form" action="/sign" method="POST">
