--- a/views/pages/foodlog.ejs
+++ b/views/pages/foodlog.ejs
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 			<h1>Food Log</h1>
 			<div class="card">
