--- a/views/pages/info.ejs
+++ b/views/pages/info.ejs
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 		   <div class="mySlides fade">
 			    <h1 class="slide_title">About CO2nsume</h1>
