--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -23,7 +23,7 @@
     <body>
      <div class="container">
       <div class="back">
-        <a href="/home" id="exit-app" title="Back to Login" class="back"><i class="material-icons">arrow_back</i></a>             
+        <a href="/home" id="exit-app" title="Back to Login" class="back"><i class="material-icons top">arrow_back</i></a>             
       </div>
       <p id='output'><%= output %></p>
       <img height=400 width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
