--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -15,7 +15,7 @@
     <body>
      <div class="container">
         <div class="back">
-            <a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+            <a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
        </div>
       <main id="webcam-app">
         <div class="md-modal md-effect-12">
