--- a/views/pages/menu.ejs
+++ b/views/pages/menu.ejs
@@ -14,12 +14,12 @@
 				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons top">arrow_back</i></a>      
 		   </div>
 		   <h1 class="dhmenu">Dining Hall Menu Suggestions</h1>
-		   <!-- <div class="getMenu">
+		   <div class="getMenu">
 			<form id="f" method="post" action="/getMenu"></form>
 			<form method="get" action="/getMenu">
 				<input class="button" type="submit" value="Get Current Menu" id='get_menu'>
 			</form>
-		   </div> -->
+		   </div>
 		   <div id="thetable" class="card">
 				<%- include('../partials/ruMenu') %>
 		   </div>
