fixed stats page values

--- a/views/partials/CO2perWeek.ejs
+++ b/views/partials/CO2perWeek.ejs
@@ -62,7 +62,7 @@
                                 <%= record.Day %>
                             </td>
                             <td>
-                                <%= record.Sum %>
+                                <%= (record.Sum).toFixed(2)%>
                             </td>
                         </tr>
                     <% }) %>
